cambiando media_url

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>{%block title%}.::.. SISTEMA DE INFORMACIÓN DE CECOCAFEN ..::.{%endblock%}</title> 
-    <link href="/archivos/css/style.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{{ MEDIA_URL }}css/style.css" rel="stylesheet" type="text/css" media="screen" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type="text/javascript" src="/archivos/js/menu.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/menu.js"></script>
     {%block extra_js%}{%endblock%}	
 </head>
 <body>
