--- a/media/css/style.css
+++ b/media/css/style.css
@@ -25,7 +25,7 @@ img { border: 0; }
 body
 {
     background-color: #19110A;
-    background-image: url(../imagen/bg-body.png);
+    background-image: url(../imagen/bck.jpg);
 }
 
 #header
@@ -100,7 +100,7 @@ body
  margin: 0 auto 0 auto;
  height: 700px;
  width: 960px;
- background: #EAEAEA;
+ background: #989898;
 }
 
 #contenido
