--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         <li><a href="#">Indicadores</a></li>
         <li><a href="#">Gráficos</a></li>
         <li><a href="#">Ayuda</a></li>
+        <li><a href="/admin">Administración</a></li>
     </ul>
  {% endblock %}
  
