--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,8 @@
  </div> <!-- Fin del div cuerpo  -->
 
  <div id="pie">
+ <div id="pie_cuerpo">
+ </div>
  </div> <!-- Fin del pie de pagina -->
 </body>
 </html>
