agregando views y cosas ya hechas

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,9 @@
     <title>{%block title%}.::.. SISTEMA DE INFORMACIÓN DE CECOCAFEN ..::.{%endblock%}</title>
     <link href="{{MEDIA_URL}}css/style.css" rel="stylesheet" type="text/css" media="screen" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type='text/javascript' src='{{MEDIA_URL}}js/menu.js'></script>	
-    {%block extra_js%}{%endblock%}	
+    <script type='text/javascript' src='{{MEDIA_URL}}js/menu.js'></script>
+    {%block extra_header%}{%endblock%}
+    	
 </head>
 <body>
 
@@ -26,14 +27,12 @@
  {% endblock %}
  
  </div> <!-- fin del menu -->
-
-{% load webdesign %}
  <div id="cuerpo">
     <div id="contenido">
         <div id="dentro-contenido">
 			<h2>Reseña Historica</h2>
-			{% lorem 3 p %}
-        
+			{% block contenido %}
+            {% endblock %}
         </div> <!-- fin del div dentro-contenido -->
     
     </div><!-- fin div contenido   -->
