--- a/media/css/style.css
+++ b/media/css/style.css
@@ -24,8 +24,8 @@ img { border: 0; }
 
 body
 {
-    background-color: #19110A;
-    background-image: url(../imagen/cecocafen_bg.png);
+    background-color: #fff;
+    #background-image: url(../imagen/cecocafen_bg.png);
 }
 
 #header
