--- a/templates/encuesta/agua.html
+++ b/templates/encuesta/agua.html
@@ -57,14 +57,16 @@
 </div>
 
 <div id="grafo"></div>
-<table>
+<table border="1">
  <thead>
     <tr>
         <th>Fuente</th>
         <th>Frecuencia</th>
         <th>%</th>
-        <th>Cantidad</th>
-        <th>Cantidad por Familia</th>
+<!--        <th>Cantidad</th>-->
+<!--        <th>Cantidad por Familia</th>-->
+        <th>Distancia fuente de agua (varas)</th>
+        
     </tr>
  </thead>
     {% for fila in tabla%}
