--- a/templates/encuesta/abono.html
+++ b/templates/encuesta/abono.html
@@ -2,7 +2,7 @@
 {%load unslugify %}
 {% block contenido %}
     numero familia = {{num_familias}}
-<table border="1">
+<table>
 <caption>Los Abonos</caption>
  <thead>
     <tr>
