pequeno fix de tabs

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
         <div id="menu">
             <ul>
                 <li><a href="/">Datos Generales</a></li>
-                <li><a href="/">Organización</a></li>
-                <li><a href="/">Familia</a></li>
+                <li><a href="/organizacion">Organización</a></li>
+                <li><a href="/familia">Familia</a></li>
                 <li><a href="/">Tenencia</a></li>
                 <li><a href="/">Tierra</a></li>
                 <li><a href="/">Suelo</a></li>
