--- a/templates/base.html
+++ b/templates/base.html
@@ -37,26 +37,20 @@
         
         <div id="menu">
             <ul>
-                <li><a href="/">Datos Generales</a></li>
                 <li><a href="/organizacion">Organización</a></li>
                 <li><a href="/familia">Familia</a></li>
-                <li><a href="/">Tenencia</a></li>
-                <li><a href="/">Tierra</a></li>
-                <li><a href="/">Suelo</a></li>
-                <li><a href="/">Producción</a></li>
-                <li><a href="/">Animales</a></li>
-                <li><a href="/">Post Cosecha</a></li>
-                <li><a href="/">Ingreso</a></li>
-                <li><a href="/">Bienes</a></li>
-                <li><a href="/">Seguridad alimentaria</a></li>
-                <li><a href="/">Vulnerabilidad</a></li>
-                <li><a href="/">Riego</a></li>
-                <li><a href="/">Agua</a></li>
-                <li><a href="/">Ahorro y Crédito</a></li>
-                <li><a href="/">Salud hogar</a></li>
-                <li><a href="/">Salud familiar</a></li>
-                <li><a href="/">Educación</a></li>
-                <li><a href="/">Jóvenes</a></li>
+                <li><a href="#">Tenencia</a></li>
+                <li><a href="#">Tierra</a></li>
+                <li><a href="#">Suelo</a></li>
+                <li><a href="/produccion">Producción</a></li>
+                <li><a href="#">Animales</a></li>
+                <li><a href="/postcosecha">Post Cosecha</a></li>
+                <li><a href="/ingresos">Ingreso</a></li>
+                <li><a href="/equipos">Bienes</a></li>
+                <li><a href="/seguridad_alimentaria">Seguridad alimentaria</a></li>
+                <li><a href="#">Riego</a></li>
+                <li><a href="#">Ahorro y Crédito</a></li>
+                <li><a href="#">Jóvenes</a></li>
             </ul>
         </div>
 
