agregando para la grafica del index

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                 <li><a href="/equipos">Bienes</a></li>
                 <li><a href="/seguridad_alimentaria">Seguridad alimentaria</a></li>
                 <li><a href="#">Riego</a></li>
-                <li><a href="#">Ahorro y Crédito</a></li>
+                <li><a href="/ahorro_credito">Ahorro y Crédito</a></li>
                 <li><a href="#">Jóvenes</a></li>
             </ul>
         </div>
