--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
             <div class="estadisticas">
                 <div class="familia_promedio">Familia Promedio <br></div>
                 <span class="hombre"><b style="font-size:24px;">{{personas}}</b><br>Personas</span>
-                <span class="hombre"><b style="font-size:24px;">{{manzanas}}</b><br>Manzanas</span>
+                <span class="hombre"><b style="font-size:24px;">{{manzanas|floatformat:2}}</b><br>Manzanas</span>
                 
       
             </div>
