--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
                 <li><a href="#">Riego</a></li>
                 <li><a href="/ahorro_credito">Ahorro y Crédito</a></li>
                 <li><a href="#">Jóvenes</a></li>
+                <li><a href="/servicios">Servicios</a></li>
             </ul>
         </div>
 
