--- a/templates/encuesta/salud.html
+++ b/templates/encuesta/salud.html
@@ -84,12 +84,11 @@ $(document).ready(function() {
 </div>
     <div class="graficos_widget">
         <h1>Graficos </h1>
-        <a id="grafico1" href="#" onCLick="click_callback(1)">Hombres de mas de 15 años</a>
-        <a id="grafico2" href="#" onCLick="click_callback(2)">Mujeres de mas de 15 años</a>
-        <a id="grafico3" href="#" onCLick="click_callback(3)">Hombres de 7 a 15 años</a>
-        <a id="grafico4" href="#" onCLick="click_callback(4)">Mujeres de 7 a 15 años</a>
-        <a id="grafico5" href="#" onCLick="click_callback(5)">Niños menor de 6 años</a>
-        <a id="grafico6" href="#" onCLick="click_callback(6)">Niñas menores de 6 años</a>
+        <a id="grafico1" href="#" onCLick="click_callback('basura')">Forma de disponer la basura</a>
+        <a id="grafico2" href="#" onCLick="click_callback('donde')">Donde hacen sus necesidades</a>
+        <a id="grafico3" href="#" onCLick="click_callback('tratamiento')">Tratamiento de desechos</a>
+        <a id="grafico4" href="#" onCLick="click_callback('frecuencia')">Frecuencia de limpieza</a>
+        <a id="grafico5" href="#" onCLick="click_callback('envases')">Que hace con envases agroquímicos</a>
     </div>
 <div id="grafo"></div>
 <table>
