--- a/templates/encuesta/animales.html
+++ b/templates/encuesta/animales.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block title %}JFPS - Fincas{% endblock %}
+{% block title %}Cecocafen - Fincas{% endblock %}
 {%block titulo%}Los Animales{%endblock%}
 {% block contenido %}
 <table>
