--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -45,23 +45,26 @@
                         {% csrf_token %}
 
                     <div id="formulario_tabla" >
-                        <div class="form_label"><b>{{form.cooperativa.label}}</b></div>
-                        <div class="form_widget"><b>{{form.cooperativa}}</b></div>
                         <div class="form_label"><b>{{form.fecha.label}}</b></div>
                         <div class="form_widget">{{form.fecha}}</div>
-
                         <div class="form_label"><b>{{form.departamento.label}}</b></div>
                         <div class="form_widget">{{form.departamento}}</div>
                         <div class="form_label"><b>{{form.municipio.label}}</b></div>
                         <div class="form_widget">{{form.municipio}}</div>
                         <div class="form_label"><b>{{form.comunidad.label}}</b></div>
                         <div class="form_widget">{{form.comunidad}}</div>
+                        <div class="form_label"><b>{{form.cooperativa.label}}</b></div>
+                        <div class="form_widget"><b>{{form.cooperativa}}</b></div>
                         <div class="form_label"><b>{{form.socio.label}}</b></div>
                         <div class="form_widget">{{form.socio}}</div> 
                         <div class="form_label"><b>{{form.desde.label}}</b></div>
                         <div class="form_widget">{{form.desde}}</div>   
                         <div class="form_label"><b>{{form.dueno.label}}</b></div>
-                        <div class="form_widget">{{form.dueno}}</div>  
+                        <div class="form_widget">{{form.dueno}}</div>
+                        <div class="form_label"><b>{{form.tecnologia.label}}</b></div>
+                        <div class="form_widget">{{form.tecnologia}}</div>  
+                        <div class="form_label"><b>{{form.certificacion.label}}</b></div>
+                        <div class="form_widget">{{form.certificacion}}</div>    
                     </div>
 
                       <input type="submit" value="Consultar" id="boton" class="filtro"/>
