--- a/templates/base.html
+++ b/templates/base.html
@@ -37,20 +37,15 @@
         
         <div id="menu">
             <ul>
-                <li><a href="/organizacion">Organización</a></li>
-                <li><a href="/familia">Familia</a></li>
-                <li><a href="#">Tenencia</a></li>
-                <li><a href="#">Tierra</a></li>
-                <li><a href="#">Suelo</a></li>
+                <li><a class="selected" href="/organizacion">Organización</a></li>
+                <li><a href="/familias">Familias</a></li>
                 <li><a href="/produccion">Producción</a></li>
-                <li><a href="#">Animales</a></li>
-                <li><a href="/postcosecha">Post Cosecha</a></li>
+                <li><a href="/animales">Animales</a></li>
                 <li><a href="/ingresos">Ingreso</a></li>
                 <li><a href="/equipos">Bienes</a></li>
                 <li><a href="/seguridad_alimentaria">Seguridad alimentaria</a></li>
-                <li><a href="#">Riego</a></li>
                 <li><a href="/ahorro_credito">Ahorro y Crédito</a></li>
-                <li><a href="#">Jóvenes</a></li>
+                <li><a href="/jovenes">Jóvenes</a></li>
                 <li><a href="/servicios">Servicios</a></li>
             </ul>
         </div>
