--- a/templates/encuesta/agua.html
+++ b/templates/encuesta/agua.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block title %}JFPS - Agua{% endblock %}
+{% block title %}Cecocafen - Agua{% endblock %}
 {%block titulo%}Agua{%endblock%}
 {%block extra_header%}
 <script type="text/javascript">
