--- a/templates/encuesta/ahorro_credito.html
+++ b/templates/encuesta/ahorro_credito.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block title %}JFPS - Fincas{% endblock %}
+{% block title %}Cecocafen - Fincas{% endblock %}
 {%block titulo%}Ahorro y crédito{%endblock%}
 {%block extra_header%}
 <script type="text/javascript">
