--- a/templates/encuesta/condiciones.html
+++ b/templates/encuesta/condiciones.html
@@ -2,7 +2,16 @@
 {% block title %}Condiciones{% endblock %}
 {%block titulo%}Condiciones{%endblock%}
 {% block contenido %}
-<table border="1">
+<div id="contenedor_servicio">
+    <a href="/familia" class="familia">Familia</a>
+    <a href="/postcosecha" class="educacion">Post Cosecha</a>
+    <a href="/fincas"class="fincas">Finca</a>
+    <a href="/abono"class="luz">Abono y aplicacion</a>
+    <a href="/riego"class="luz">Riego</a>
+    <a href="/condiciones"class="luz">Condiciones</a>
+</div>
+<table>
+<caption>Condiciones en el campo</caption>
  <thead>
     <tr>
         <th></th>
