--- a/templates/encuesta/educacion.html
+++ b/templates/encuesta/educacion.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block title %}JFPS - Educación{% endblock %}
+{% block title %}Cecocafen - Educación{% endblock %}
 {%block titulo%}La Educación{%endblock%}
 {% block contenido %}
 <div id="contenedor_servicio">
