--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -73,10 +73,8 @@
                     <div id="indicadores" class="der">
                         <h2 class="titulo_indicadores">INDICADORES</h2>
                         <div id="contenedor_indicadores">
-                            <a href="/familia" class="familia">Familia</a>
+                            <a href="/familias" class="familia">Familias</a>
                             <a href="/organizacion" class="organizacion">Organización</a>
-                            <a href="/fincas"class="fincas">Fincas</a>
-                            <a href="/arboles"class="arboles">Árboles</a>
                             <a href="/animales"class="animales">Animales</a>
                             <a href="/cultivos"class="cultivos">Cultivos</a>
                             <a href="/ingresos"class="ingresos">Ingresos</a>
