--- a/templates/encuesta/luz.html
+++ b/templates/encuesta/luz.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block title %}JFPS - Luz{% endblock %}
+{% block title %}Cecocafen - Luz{% endblock %}
 {%block titulo%}Luz{%endblock%}
 {% block contenido %}
 <div id="contenedor_servicio">
