--- a/templates/encuesta/organizacion.html
+++ b/templates/encuesta/organizacion.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block title %}JFPS - Organización{% endblock %}
+{% block title %}Cecocafen - Organización{% endblock %}
 {%block titulo%}La Organización{%endblock%}
 {%block extra_header%}
 <script type="text/javascript">
@@ -43,6 +43,7 @@
 <div id="grafo"></div>
 
 <table>
+<caption>La organización</caption>
  <thead>
     <tr>
         <th></th>
