--- a/templates/encuesta/organizacion_jovenes.html
+++ b/templates/encuesta/organizacion_jovenes.html
@@ -2,7 +2,7 @@
 {% block title %}Jóvenes{% endblock %}
 {%block titulo%}Jóvenes{%endblock%}
 {% block contenido %}
-<table border="1">
+<table>
  <thead>
     <tr>
         <th></th>
