--- a/templates/encuesta/riego.html
+++ b/templates/encuesta/riego.html
@@ -1,8 +1,17 @@
 {% extends "base.html" %}
 {% block title %}Condiciones{% endblock %}
-{%block titulo%}Condiciones{%endblock%}
+{%block titulo%}Riego{%endblock%}
 {% block contenido %}
-<table border="1">
+<div id="contenedor_servicio">
+    <a href="/familia" class="familia">Familia</a>
+    <a href="/postcosecha" class="educacion">Post Cosecha</a>
+    <a href="/fincas"class="fincas">Finca</a>
+    <a href="/abono"class="luz">Abono y aplicacion</a>
+    <a href="/riego"class="luz">Riego</a>
+    <a href="/condiciones"class="luz">Condiciones</a>
+</div>
+<table>
+<caption>Riego</caption>
  <thead>
     <tr>
         <th></th>
