--- a/templates/encuesta/salud.html
+++ b/templates/encuesta/salud.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block title %}JFPS - Salud{% endblock %}
+{% block title %}Cecocafen - Salud{% endblock %}
 {%block titulo%}La Salud{%endblock%}
 {%block extra_header%}
 <script type="text/javascript">
