--- a/templates/encuesta/servicios.html
+++ b/templates/encuesta/servicios.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block title %}JFPS - Servicios Básicos{% endblock %}
+{% block title %}Cecocafen - Servicios Básicos{% endblock %}
 {%block titulo%}Servicios Básicos{%endblock%}
 {% block contenido %}
 
