--- a/templates/encuesta/abono.html
+++ b/templates/encuesta/abono.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 {%load unslugify %}
+{%block titulo%}Uso y aplicación de Abono{%endblock%}
 {% block contenido %}
-    numero familia = {{num_familias}}
+<div id="contenedor_servicio">
+    <a href="/familia" class="familia">Familia</a>
+    <a href="/postcosecha" class="educacion">Post Cosecha</a>
+    <a href="/fincas"class="fincas">Finca</a>
+    <a href="/abono"class="luz">Abono y aplicacion</a>
+    <a href="/riego"class="luz">Riego</a>
+    <a href="/condiciones"class="luz">Condiciones</a>
+</div>
 <table>
-<caption>Los Abonos</caption>
+<caption>Uso de Abonos</caption>
  <thead>
     <tr>
         <th></th>
@@ -48,5 +56,111 @@
         <td>{{value.porcentaje_urea|floatformat}}</td>
     </tr>
     {%endfor%}
+</table>
+
+<!--esta es la tabla de compra y aplicacion de abono-->
+
+<table>
+<caption>Compra y aplicación de abonos</caption>
+ <thead>
+    <tr>
+        <th>Tipo de abono</th>
+        <th>Unidad</th>
+        <th>¿Cuanto hace?</th>
+        <th>¿Cuanto compra?</th>
+        <th>¿cuanto aplica?</th>
+    </tr>
+  </thead>
+    <tr>
+        <td>Pulpa</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.pulpa|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>Estiercole</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.estiercol|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>Gallinaza</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.gallinaza|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>Composta</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.composta|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>Lombrices</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.lombrices|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>Bocachi</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.bocachi|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>foliar Organico</td>
+        <td>kg</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.foliar_org|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>Foliar Quimico</td>
+        <td>litro</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.foliar_qui|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>Verde</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.verde|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>15-15-15</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.quince|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>20-20-20</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.veinte|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>18-6-12-4</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.seis|floatformat}}</td>
+        {%endfor%}
+    </tr>
+    <tr>
+        <td>Urea-Nitrato</td>
+        <td>---</td>   
+        {%for key, value in tabla_compra.items%}
+        <td>{{value.urea|floatformat}}</td>
+        {%endfor%}
+    </tr>
 </table>
 {% endblock %}
