--- a/templates/encuesta/postcosecha.html
+++ b/templates/encuesta/postcosecha.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 {%load unslugify %}
-
+{%block titulo%}Post Cosecha{%endblock%}
 {% block contenido %}
-
+<div id="contenedor_servicio">
+    <a href="/familia" class="familia">Familia</a>
+    <a href="/postcosecha" class="educacion">Post Cosecha</a>
+    <a href="/fincas"class="fincas">Finca</a>
+    <a href="/abono"class="luz">Abono y aplicacion</a>
+    <a href="/riego"class="luz">Riego</a>
+    <a href="/condiciones"class="luz">Condiciones</a>
+</div>
 <table>
  <thead>
     <tr>
